--- a/build.gradle
+++ b/build.gradle
@@ -115,8 +115,13 @@ dependencies {
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.9'
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '5.4.1'
+//}
+
+wrapper {
+    gradleVersion = '5.4.1'
+    distributionUrl = distributionUrl.replace("bin", "all")
 }
 
 war {
