--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,7 @@
 ---
 applications:
 - name: spring-music
-  memory: 512M
   instances: 1
-  host: spring-music-${random-word}
+  random-route: true
   path: build/libs/spring-music.war
 
